# datafusion-streams

./: Cargo.toml  README.md  docker-compose.yaml
src/: dataframe.rs  lib.rs
src/kafka/: execution.rs  mod.rs  source.rs
tests/: basic_tests.rs  utils.rs
